Found and fixed z-index and inquiz not working from popUp errors

--- a/css/hogwarts.css
+++ b/css/hogwarts.css
@@ -336,3 +336,11 @@ button.filter {
     filter: grayscale(100%);
     cursor: pointer;
 }
+
+.dialog {
+    z-index: 1;
+}
+
+.popupbox {
+    z-index: 0;
+}
